--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">VersBot</string>
+    <string name="error_response_null">Error: Response is null</string>
+    <string name="account_alias_default">Account Alias</string>
+    <string name="account_id_default">***-***-********-***</string>
+    <string name="get_account_details_button_string">Get Account Details</string>
 </resources>
